force-app/main/default/objects/Item_de_retirada_r_pida__c/Item_de_retirada_r_pida__c.object-meta.xml
<CustomObject>
    <label>Item de retirada rápida</label>
    <nameField>
        <displayFormat>IRR-{0000}</displayFormat>
        <label>Nome de Item de retirada rápida</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens de retirada rápida</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>