force-app/main/default/objects/Item_de_retirada_r_pida__c/fields/acessorios__c.field-meta.xml
<CustomField>
    <fullName>acessorios__c</fullName>
    <label>Acessórios</label>
    <type>TextArea</type>
</CustomField>