force-app/main/default/objects/Item_de_retirada_r_pida__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Itens de retirada rápida</relationshipLabel>
    <relationshipName>Itens_de_retirada_r_pida</relationshipName>
    <type>Lookup</type>
</CustomField>