force-app/main/default/objects/Item_de_retirada_r_pida__c/fields/Item_possui_avaria__c.field-meta.xml
<CustomField>
    <fullName>Item_possui_avaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item possui avaria</label>
    <type>Checkbox</type>
</CustomField>