force-app/main/default/objects/Item_de_retirada_r_pida__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens de retirada rápida</relationshipLabel>
    <relationshipName>Itens_de_retirada_r_pida</relationshipName>
    <type>Lookup</type>
</CustomField>