force-app/main/default/objects/Item_de_retirada_r_pida__c/fields/Retirada_rapida__c.field-meta.xml
<CustomField>
    <fullName>Retirada_rapida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retirada rápida</label>
    <referenceTo>Retirada_rapida__c</referenceTo>
    <relationshipLabel>Itens de retirada rápida</relationshipLabel>
    <relationshipName>Itens_de_retirada_r_pida</relationshipName>
    <type>Lookup</type>
</CustomField>